--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 /MyWpfDemo/.vs/MyWpfDemo/v16/.suo
 /MyWpfDemo/WpfApp1/obj/Debug
 /MyWpfDemo/WpfApp1/bin/Debug
+/MyWpfDemo/.vs/Supercharger/WpfApp1
+/MyWpfDemo/.vs/Supercharger/websocketClient
+/MyWpfDemo/websocketClient/bin/Debug
+/MyWpfDemo/websocketClient/obj/Debug
