主界面完成 菜单 / 工具栏 / 状态栏

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /MyWpfDemo/.vs/Supercharger/websocketClient
 /MyWpfDemo/websocketClient/bin/Debug
 /MyWpfDemo/websocketClient/obj/Debug
+/MyWpfDemo/.vs/Supercharger/MainWindows
+/MyWpfDemo/MainWindows/bin/Debug
+/MyWpfDemo/MainWindows/obj/Debug
