数据库管理提交

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /MyWpfDemo/.vs/Supercharger/MainWindows
 /MyWpfDemo/MainWindows/bin/Debug
 /MyWpfDemo/MainWindows/obj/Debug
+/MyWpfDemo/DBManager/obj/Debug
