--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,12 @@
 /MyWpfDemo/MainWindows/bin/Debug
 /MyWpfDemo/MainWindows/obj/Debug
 /MyWpfDemo/DBManager/obj/Debug
+/MyWpfDemo/.vs
+/MyWpfDemo/HandycontrolStudy/bin/Debug
+/MyWpfDemo/HandycontrolStudy/obj/Debug
+/MyWpfDemo/OnlyTest/obj/Debug
+/MyWpfDemo/treeview/bin/Debug
+/MyWpfDemo/treeview/obj/Debug
+/MyWpfDemo/TreeViewDemo/bin/Debug
+/MyWpfDemo/TreeViewDemo/obj/Debug
+/ShareDemo/.vs/Supercharger
