--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /MyWpfDemo/OnlyTest/bin/Debug
 /MyWpfDemo/TreeListViewSample/.vs
 /MyWpfDemo/TreeListViewSample/TreeListViewSample/bin/Debug
+/MyWpfDemo/packages
